# Mesugakify

./: README.md  pyproject.toml
src/mesugakify/: config.py  mesugakify.py
