[project]
name = "Mesugakify"
description = "Makes your program a Mesugaki."
keywords = ["gpt", "Roleplay", "Mesugaki", "Character"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [{ name = "Harry Chen", email = "harrycym@163.com" }]
dynamic = ["version"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "litellm",
    "pathlib",
]